--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ script:
 notifications:
   irc:
     channels:
-      - 'chat.freenode.net#wikimedia-labs'
+      - 'chat.freenode.net##stashbot'
     template:
-       - "!log tools.stashbot %{repository}#%{build_number} (%{branch} - %{commit} %{author}): %{message} - %{build_url}"
+       - "%{repository}#%{build_number} (%{branch} - %{commit} %{author}): %{message} - %{build_url}"
