--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 elasticsearch>=1.0.0,<2.0.0
-irc
+irc>=13.3.1
+jaraco.collections>=1.3.1
 pyyaml
 requests[security]
 pyopenssl
 ndg-httpsclient
 pyasn1
 python-ldap
+six>=1.10.0
