--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ jaraco.collections>=1.3.1
 pyyaml
 requests[security]
 pyopenssl
-ndg-httpsclient
+ndg-httpsclient>=0.4.0
 pyasn1
 python-ldap
 six>=1.10.0
