--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 elasticsearch>=1.0.0,<2.0.0
 irc>=14.1
 jaraco.collections>=1.3.1
-pyyaml
-requests[security]
-pyopenssl
+mwclient>=0.8.2
 ndg-httpsclient>=0.4.0
 pyasn1
+pyopenssl
 python-ldap
+pyyaml
+requests[security]
 six>=1.10.0
