Honor ACLs for !log processing (#17)
Allow configuring whitelist/blacklist patterns for controlling which
!log messages will actually be processed. The access control list is
configurable per-channel. ACLs are expressed as ban mask style glob
patterns.

If the !log message source is not allowed based on the ACL configuration
a warning message is logged and the user is told that they are not
authorized. The logging should help fine tune configuration of the ACLs.

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,16 @@
 [tox]
 minversion = 1.6
 skipsdist = True
-envlist = flake8
+envlist = py2, flake8
+
+[testenv]
+basepython = python2
+commands =
+  nosetests --with-doctest --doctest-tests -v --detailed-errors
+
+deps =
+  -r{toxinidir}/requirements.txt
+  nose
 
 [testenv:flake8]
 commands = flake8 {posargs}
@@ -12,3 +21,7 @@ deps = flake8
 ; E124 closing bracket does not match visual indentation
 ignore = E128, E124
 exclude = .tox
+count = 1
+show-pep8 = 1
+show-source = 1
+statistics = 1
