Add kubernetes deployment config and runner script
Add a kubernetes deployment description file and a k8s.sh runner script
to manage the bot running on kubernetes. Totally untested so it will
probably break badly, but it is something to start iterating on.

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,7 @@
 /.viminfo
 /access.log
 /archive
-/config-test.yaml
-/config.yaml
+/etc/config*.yaml
 /error.log
 /replica.my.cnf
 /service.log
@@ -15,3 +14,4 @@
 /stashbot.err
 /stashbot.out
 /virtenv
+/venv-*
