Dotfiles: Add .vimrc; ignore .python_history

--- a/.gitignore
+++ b/.gitignore
@@ -2,16 +2,17 @@
 /.bash_history
 /.kube
 /.lesshst
+/.python_history
 /.tox
 /.viminfo
 /access.log
 /archive
-/etc/config*.yaml
 /error.log
+/etc/config*.yaml
 /replica.my.cnf
 /service.log
 /service.manifest
 /stashbot.err
 /stashbot.out
-/virtenv
 /venv-*
+/virtenv
