Tweak git config
* Add git push-for-review alias
* Ignore Elasticsearch secrets

Change-Id: I718b7822413d9dd41ad63e7e22c095e2a957f3fb

--- a/.gitconfig
+++ b/.gitconfig
@@ -97,6 +97,7 @@
 
 	# tag
 	t = tag -n --list   # show tags with first line of annotation
+	push-for-review = push origin HEAD:refs/for/master
 
 [help]
 	autocorrect = 1
