--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,20 @@
 [tox]
 minversion = 1.6
 skipsdist = True
-envlist = py2, flake8
+envlist = py2, py3, flake8
 
-[testenv]
+[testenv:py2]
 basepython = python2
 commands =
   nosetests --with-doctest --doctest-tests -v --detailed-errors
+deps =
+  -r{toxinidir}/requirements.txt
+  nose
 
+[testenv:py3]
+basepython = python3
+commands =
+  nosetests --with-doctest --doctest-tests -v --detailed-errors
 deps =
   -r{toxinidir}/requirements.txt
   nose
