Drop Python2 support
* Update to newer versions of irc, ib3, ldap3, mwclient, and python-twitter
* Stop testing using python2
* Add test for black compliant formatting

Change-Id: Icc400f5df825e6f90c1b99125f107c0d1143a33a

--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,12 @@
 [tox]
 minversion = 1.6
 skipsdist = True
-envlist = py2, py3, flake8
-
-[testenv:py2]
-basepython = python2
-commands =
-  nosetests --with-doctest --doctest-tests -v --detailed-errors
-deps =
-  -r{toxinidir}/requirements.txt
-  nose
+envlist = py3, flake8, black
 
 [testenv:py3]
 basepython = python3
 commands =
-  nosetests --with-doctest --doctest-tests -v --detailed-errors
+  nosetests
 deps =
   -r{toxinidir}/requirements.txt
   nose
@@ -23,9 +15,18 @@ deps =
 commands = flake8 {posargs}
 deps = flake8
 
+[testenv:black]
+basepython = python3.7
+commands = black --check --diff .
+deps = black
+
 [flake8]
 exclude = .tox
 count = 1
 show-pep8 = 1
 show-source = 1
 statistics = 1
+
+[nosetests]
+verbosity=3
+with-doctest=1
