--- a/etc/deployment.yaml
+++ b/etc/deployment.yaml
@@ -1,30 +1,30 @@
 ---
 # Run stashbot on kubernetes
+apiVersion: apps/v1
 kind: Deployment
-apiVersion: extensions/v1beta1
 metadata:
   name: stashbot.bot
-  namespace: stashbot
+  labels:
+    name: stashbot.bot
+    toolforge: tool
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      name: stashbot.bot
+      toolforge: tool
   template:
     metadata:
       labels:
         name: stashbot.bot
+        toolforge: tool
     spec:
       containers:
         - name: bot
-          image: docker-registry.tools.wmflabs.org/toollabs-python35-base:latest
+          image: docker-registry.tools.wmflabs.org/toolforge-python37-sssd-base:latest
           command: [ "/data/project/stashbot/bin/stashbot.sh", "run" ]
           workingDir: /data/project/stashbot
           env:
             - name: HOME
               value: /data/project/stashbot
           imagePullPolicy: Always
-          volumeMounts:
-            - name: home
-              mountPath: /data/project/stashbot/
-      volumes:
-        - name: home
-          hostPath:
-            path: /data/project/stashbot/
