Hot fixes from Toolforge deployment
* Use full path to /usr/bin/kubectl
* Set namespace in deployment

Change-Id: I3b26190f8629f0a0bcbc0775a35e8f7310ce17e6

--- a/etc/deployment.yaml
+++ b/etc/deployment.yaml
@@ -4,6 +4,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: stashbot.bot
+  namespace: tool-stashbot
   labels:
     name: stashbot.bot
     toolforge: tool
