Sync etc/ and bin/ with changes from deployment
Sync changes made in the live deployment while migrating from Fleanode
to Libera.Chat with the repo. We could really roll all of these back,
but it seems nice to leave a pattern that could be reused in the future
if we find a need to migrate to another IRC network or a completely
different chatops gateway.

Change-Id: Ia4ed511886e8dca3748ea64edf4533613d60a396

--- a/etc/deployment-libera.yaml
+++ b/etc/deployment-libera.yaml
@@ -3,27 +3,29 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: stashbot.bot
+  name: stashbot.libera
   namespace: tool-stashbot
   labels:
-    name: stashbot.bot
+    name: stashbot.libera
     toolforge: tool
 spec:
   replicas: 1
   selector:
     matchLabels:
-      name: stashbot.bot
+      name: stashbot.libera
       toolforge: tool
   template:
     metadata:
       labels:
-        name: stashbot.bot
+        name: stashbot.libera
         toolforge: tool
     spec:
       containers:
         - name: bot
           image: docker-registry.tools.wmflabs.org/toolforge-python37-sssd-base:latest
-          command: [ "/data/project/stashbot/bin/stashbot.sh", "run" ]
+          command:
+            - "/data/project/stashbot/bin/stashbot.sh"
+            - "run"
           workingDir: /data/project/stashbot
           env:
             - name: HOME
