Add .cache and .toolskube to gitignores
Change-Id: Ieca26fdde29ba57bcf5b05ad0ee8a0db09325d57

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 *.pyc
 /.bash_history
+/.cache
 /.elasticsearch.ini
 /.kube
 /.lesshst
 /.python-version
 /.python_history
+/.toolskube
 /.tox
 /.viminfo
 /access.log
