dev: replace nose with pytest
"Nose has been in maintenance mode for the past several years and will
likely cease without a new person/team to take over maintainership." --
<https://nose.readthedocs.io/en/latest/index.html>

Change-Id: Ia58f61a971f33203aa1622ce778ce22c81c85fb5

--- a/tox.ini
+++ b/tox.ini
@@ -6,10 +6,10 @@ envlist = py37, flake8, black
 [testenv:py37]
 basepython = python3.7
 commands =
-  nosetests
+  pytest --doctest-modules -rfs stashbot/
 deps =
   -r{toxinidir}/requirements.txt
-  nose
+  pytest
 
 [testenv:flake8]
 basepython = python3.7
@@ -28,6 +28,5 @@ show-pep8 = 1
 show-source = 1
 statistics = 1
 
-[nosetests]
-verbosity=3
-with-doctest=1
+[pytest]
+doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL
