dev: simplify tox.ini
Change-Id: I6efdae06d86d5092335e638475dd8282770cc916

--- a/tox.ini
+++ b/tox.ini
@@ -1,25 +1,18 @@
 [tox]
 minversion = 1.6
 skipsdist = True
-envlist = py37, flake8, black
 
-[testenv:py37]
+[testenv]
 basepython = python3.7
 commands =
   pytest --doctest-modules -rfs stashbot/
+  flake8
+  black --check --diff .
 deps =
   -r{toxinidir}/requirements.txt
+  black
+  flake8
   pytest
-
-[testenv:flake8]
-basepython = python3.7
-commands = flake8 {posargs}
-deps = flake8
-
-[testenv:black]
-basepython = python3.7
-commands = black --check --diff .
-deps = black
 
 [flake8]
 exclude = .tox
