--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 elasticsearch>=7.0.0,<8.0.0
 ib3==0.2.0
 irc>=17.1
-ldap3==2.6.1
+ldap3>=2.6.1
 Mastodon.py>=1.3.1
 mwclient>=0.10.0
 python-twitter>=3.5
