Move entry point script into stashbot module
* Move stashbot.py to stashbot/cli.py.
* Convert stashbot/cli.py contents into a function.
* Expose stashbot.cli.main() as `python3 -m stashbot`.
* Update README for new calling pattern.
* Update bin/stashbot.sh for new calling pattern.
* Update tox.ini to remove restriction of only scanning the stashbot
  module for tests now that the namespace collision of the top level
  stashbot.py script is gone.

Change-Id: I9d6224ad13b760596fb8d46f44fe2e64f38fa250

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ skipsdist = True
 [testenv]
 basepython = python3.9
 commands =
-  pytest --doctest-modules -rfs stashbot/
+  pytest --doctest-modules -rfs
   flake8
   black --check --diff .
 deps =
